--- a/mysite/blog/templates/article.html
+++ b/mysite/blog/templates/article.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %} {{ article.header }} {% endblock %}
+
+{% block body %}
     <h1>{{article.header}}</h1>
     <p>{{article.text}}</p>
     <p>Комментарии:</p>
@@ -12,5 +10,4 @@
     <p>{{comment.author}} :
         {{comment.text}}</p>
     {% endfor %}
-</body>
-</html>
+{% endblock %}
