--- a/mysite/blog/templates/articles.html
+++ b/mysite/blog/templates/articles.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %} Articles {% endblock %}
+
+{% block body %}
     {% for article in articles %}
-    <p><a href="/articles/{{article.header}}" >{{article.header}}</a></p>
+    <p><a href="/articles/{{article.slug}}" >{{article.header}}</a></p>
     {% endfor %}
-</body>
-</html>
+{% endblock %}
